[package]
name = "pki-bonus"
version = "0.1.0"
authors = ["Robin Hundt <24554122+robinhundt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.33"
anyhow = "1.0.40"
clap = "3.0.0-beta.2"